# sloyka

./: .flake8  .gitignore  .readthedocs.yml  CONTRIBUTING.md  EmotionClass.py  Makefile  README.md  index.rst  pyproject.toml  requirements.txt
.github/workflows/: 1dev_ci_on_push.yaml  2dev_ci_on_pr.yaml  checks.yml  dev_ci_on_merge.yaml  dev_ci_on_pr.yaml  dev_ci_on_push.yaml  test_on_push.yaml  tests.yml  todotoissue.yml
data/processed/: messages.geojson  semantic_graph_kamenka_komenda_primorsky.graphml  semantic_graph_shuvalovo_ozerki_vyborgsky.graphml
docs/: conf.py  index.rst  pyproject.toml  requirements.txt
docs/source/: about.rst  conf.py  contribution.rst  faq.rst  index.rst
docs/source/about/: installation.rst  introduction.rst  pipeline.rst
docs/source/about/includes/: _documentation-stanza.rst
docs/source/components/: event_detection.rst  geocoder.rst  index.rst  text_classifier_topics.rst
docs/source/modules/: GeoDataGetter.rst  Geocoder_special.rst  OtherGeoObjects.rst  StreetExtractor.rst  Streets.rst  VKParser.rst  city_services_extract.rst  emotion_classifier.rst  event_dynamic_prediction.rst  geocoder.rst  regional_activity.rst  semantic_graph.rst  text_classifier.rst  topic_modeler.rst  visualize_graph.rst
docs/source/soika/: index.rst  installation.rst  quickstart.rst  soika.rst
docs/source/user/: geocoder.rst  modules.rst  semantic_graph.rst
examples/: GeoDataGetter.py  area_matcher_example.ipynb  city_services_example.ipynb  classifier_example.ipynb  comments_reply_example.ipynb  data_getter_example.ipynb  emotion_example.ipynb  event_detection_example.ipynb  geocoder_example.ipynb  graph_vis_example.ipynb  graph_visualization_example.ipynb  graph_with_cluster.ipynb  group_name_example.ipynb  hyper_graph_vis_example.ipynb  leons_work.ipynb  new_graph_extraction.ipynb  parklike_ner_example.ipynb  parser_data_spb.ipynb  parsers_example.ipynb  pipeline_example.ipynb  pipeline_sloyka.ipynb  poetry_env.py  post_getter.ipynb  regional_activity_example.ipynb  ruina.geojson  sample_data.csv  semantic_graph_example.ipynb  semantic_graph_example.py  tebles_test.ipynb  test_photon_and_nominatim_geocoding.ipynb  topic_classifier_example.ipynb
factfinder/: __init__.py
factfinder/src/: G_new.graphml_with_atributes  __init__.py  constants.py  data_getter.py  exceptions_countries.csv  geocoder.py  networkx-pyvis.html  sem_geo_graph.ipynb  semantic_graph.py  semantic_graph_example.ipynb  semantic_model.py  semantic_space_connection.py  test.ipynb  test_dataframe_1.csv  text_classifier_topics.py
semantic_vector/: README.md
semantic_vector/data/output/: graph.csv
semantic_vector/output_data/: semantic_value.csv
semantic_vector/src/: SEMANTIC_README.md  create_custom_model.py  evaluate_graph.py  get_static_model.py  paths.py  preprocessor.py  semantic_value.ipynb  semantic_value.py  train_model.py  use_example.py  use_static_model.py  visualization.py
semantic_vector/training_data/: kg.graphml
sloyka/: __init__.py
sloyka/sample_data/: gutcnina.graphml  mo_57.csv  okrug57.geojson  regional_activity.geojson  sample_data.parquet  sample_data_geocoded_emotioned.parquet  sample_data_graph.graphml  test_activity_data.csv  test_activity_data.geojson  vnukovomos.csv  vyborg_graph.graphml  vyborg_graph_2.graphml  vyborg_graph_filtered_updated.graphml
sloyka/sample_data/processed/: districts.geojson  municipalities.geojson  semantic_graph_example.graphml  semantic_graph_posts_kronshtadt2000_kronstadtsky.graphml  semantic_graph_primorskij_rajon_primorsky.graphml
sloyka/sample_data/raw/: population.geojson  posts_newscentr_central.csv
sloyka/src/: 4.2.0  G.graphml  G_new_with_attributes.graphml  __init__.py  area_matcher.py  city_services_extract.py  comments_reply.py  constants.py  data_getter.py  emotionclass.py  event_detection.py  exсeptions_city.csv  geocoder.py  graph_test_1.csv  graph_with_cluster.ipynb  interactive_graph.html  interactive_graph_atributes.html  ner_parklike.py  new_graph_extraction.ipynb  new_nodes.csv  pipeline.py  regional_activity.py  rule_for_natasha.py  semantic_graph.py  semantic_model.py  text_classifier.py  text_classifiers.py
sloyka/src/geocoder/: address_extractor_titles.py  city_objects_extractor.py  city_objects_getter.py  geocoder.py  location_getter.py  objects_address_extractor_by_rules.py  rule_for_natasha.py  street_extractor.py  street_getter.py  text_address_extractor_by_rules.py  word_form_matcher.py
sloyka/src/hyper_graph/: hpgh.py
sloyka/src/risks/: emotion_classifier.py  emotionclass.py  event_detection.py  event_detector.py  regional_activity.py  text_classifier.py  text_classifiers.py
sloyka/src/semantic_graph/: g_attrs_adder.py  g_text_data_getter.py  keyword_extracter.py  semantic_closeness_annotator.py  semantic_graph.py  semantic_graph_builder.py  text_data_getter.py
sloyka/src/utils/: area_matcher.py  constants.py
sloyka/src/utils/data_getter/: city_services_extract.py  (+8 more)
sloyka/src/visual/: graph_vis.ipynb  graph_visualization.py
soika/: __init__.py
soika/sample_data/: sample_data_geocoded.parquet
soika/src/: __init__.py
soika/src/geocoder/: city_objects_extractor.py  geocoder.py  objects_address_extractor_by_rules.py  street_extractor.py  text_address_extractor_by_rules.py
soika/src/risks/: emotion_classifier.py  event_detector.py  regional_activity.py  text_classifier.py
soika/src/semantic_graph/: g_attrs_adder.py  g_text_data_getter.py  keyword_extracter.py  semantic_closeness_annotator.py  semantic_graph_builder.py
soika/src/utils/: constants.py
soika/src/visual/: graph_visualization.py
source/: conf.py  data_getter.rst  event_detection.rst  geocoder.rst  index.rst  semantic_graph.rst  text_classifiers.rst
tests/: test_OSM_request_tag.py  test_area_matcher.py  test_classifier.py  test_classifier_topic.py  test_classifiers.py  test_data_getters.py  test_emotion_classifier.py  test_events_modelling.py  test_geocoder.py  test_geocoder_matcher.py  test_location.py  test_semantic_graph.py  test_semantiс_vector.py  test_services_extractor.py  test_streets.py
(+15 files in other folders)
