[tool.poetry]
name = "soika"
version = "0.2.6"
description = "Library for city identity analysis from social media posts and comments"
authors = ["sandrro, georgekontsevik"]
readme = "README.md"
packages = [{ include = "soika" }]

[tool.poetry.dependencies]
python = ">=3.10.6,<3.12"
pandas = "2.2.2"
matplotlib = "3.7.0"
nltk = "3.8.1"
geopandas = "0.14.4"
numpy = "1.25.2"
flair = "0.12.2"
networkx = "3.3"
osm2geojson = "0.2.3"
osmnx = "1.5.1"
pymorphy2 = "0.9.1"
torch = "2.1.1"
tqdm = "4.64.1"
geopy = "2.3.0"
shapely = "2.0.1"
transformers = ">=4.31.0"
bertopic = "0.15.0"
natasha = "1.6.0"
loguru = "0.7.2"
pandarallel = "1.6.5"
keybert = "0.8.3"
rapidfuzz = "^3.9.0"
osmapi = "^4.0.0"
folium = "^0.16.0"
hypernetx = "^2.3.5"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2024.5.6"
readthedocs-sphinx-search = "^0.3.2"
sphinx-autobuild = "^2024.4.16"
sphinx-design = "^0.6.0"
sphinx-hoverxref = "^1.4.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-issues = "^4.1.0"
sphinx-notfound-page = "^1.0.2"
sphinx = "^7.3.7"
myst-parser = "^3.0.1"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "7.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.0"
flake8 = "6.0.0"
isort = "5.12.0"
black = "23.1.0"
pylint = "3.0.2"
jupyter = "^1.0.0"
testresources = "^2.0.1"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120

